--- a/SyncfusionDocumentation-WASMVersion/SyncfusionDocumentation-WASMVersion.csproj
+++ b/SyncfusionDocumentation-WASMVersion/SyncfusionDocumentation-WASMVersion.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.13" PrivateAssets="all" />
+    <PackageReference Include="Syncfusion.Blazor.Calendars" Version="23.1.42" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="23.1.42" />
   </ItemGroup>
 
 </Project>
