--- a/SyncfusionDocumentation-WASMVersion/SyncfusionDocumentation-WASMVersion.csproj
+++ b/SyncfusionDocumentation-WASMVersion/SyncfusionDocumentation-WASMVersion.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.13" PrivateAssets="all" />
+    <PackageReference Include="Npm" Version="3.5.2" />
     <PackageReference Include="Syncfusion.Blazor.buttons" Version="23.1.42" />
     <PackageReference Include="Syncfusion.Blazor.Calendars" Version="23.1.42" />
     <PackageReference Include="Syncfusion.Blazor.Core" Version="23.1.42" />
