Normal and Cdn working while NPM and LibMan not working

--- a/SyncfusionDocumentation-WASMVersion/compilerconfig.json
+++ b/SyncfusionDocumentation-WASMVersion/compilerconfig.json
@@ -2,5 +2,9 @@
   {
     "outputFile": "wwwroot/themes/syncfusion/blazor-themes/SCSS-Themes/material-dark.css",
     "inputFile": "wwwroot/themes/syncfusion/blazor-themes/SCSS-Themes/material-dark.scss"
+  },
+  {
+    "outputFile": "wwwroot/styles/custom.css",
+    "inputFile": "wwwroot/styles/custom.scss"
   }
 ]
